--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 	],
 	"dependencies": {
 		"arrify": "^2.0.1",
-		"cp-file": "^7.0.0",
+		"cp-file": "diegosucaria/cp-file",
 		"globby": "^9.2.0",
 		"has-glob": "^1.0.0",
 		"junk": "^3.1.0",
